--- a/README
+++ b/README
@@ -1,2 +1,4 @@
-git clone git://github.com/javipolo/vim.git .vim
-ln -s .vim/vimrc .vimrc
+Quick setup:
+
+git clone --recursive git://github.com/javipolo/vim.git ~/.vim
+ln -s .vim/vimrc ~/.vimrc
